<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_year"
        android:orderInCategory="100"
        android:title="@string/action_year"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_month"
        android:orderInCategory="100"
        android:title="@string/action_month"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_week"
        android:orderInCategory="100"
        android:title="@string/action_week"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_day"
        android:orderInCategory="100"
        android:title="@string/action_day"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never"/>
</menu>